src/objects/pse__Issue__c.object
<CustomObject>
    <customHelpPage>pse__IssueHelp</customHelpPage>
    <description>Contains issues raised against projects.</description>
    <fields>
        <fullName>pse__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account relating to the issue.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Action_Plan__c</fullName>
        <description>A description for the plan of action to take place against the issue.</description>
        <label>Action Plan</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Closed_Date__c</fullName>
        <description>The date that the issue was closed.</description>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Closed__c</fullName>
        <description>Determines when closed based on the issue&apos;s Status. Defaults to true when the Status is Completed or Closed - No action. Set to false for all other Status values.</description>
        <formula>if(OR(ISPICKVAL(pse__Status__c,&apos;Closed - No action&apos;),ISPICKVAL(pse__Status__c,&apos;Completed&apos;)) ,true,false)</formula>
        <label>Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Comments__c</fullName>
        <description>Additional comments about the issue.</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Date_Raised__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date that the issue was raised.</description>
        <label>Date Raised</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Impact__c</fullName>
        <description>The impact of the issue. Values are 1 to 5. 1 is the lowest impact and 5 is the highest.</description>
        <label>Impact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Issue_Description__c</fullName>
        <description>A description of the issue.</description>
        <label>Issue Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Issue_Name__c</fullName>
        <description>The name of the issue.</description>
        <label>Issue Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Issue_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The resource assigned as the issue owner.</description>
        <label>Issue Owner</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
            <filterItems>
                <field>Contact.pse__Is_Resource__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Contact.pse__Is_Resource_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The milestone relating to the issue.</description>
        <label>Milestone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>pse__Milestone__c.pse__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>pse__Milestone__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The opportunity relating to the issue.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Priority__c</fullName>
        <description>The priority of the issue. Values are 1 to 5. 1 is the lowest impact and 5 is the highest.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The project task relating to the issue.</description>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>pse__Project_Task__c.pse__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The project relating to the issue.</description>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Severity__c</fullName>
        <description>The severity of the issue. Calculated from multiplying the Impact and Priority value.</description>
        <formula>VALUE( TEXT(pse__Impact__c ) ) * VALUE( TEXT(pse__Priority__c  ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The severity of the issue. Calculated from multiplying the Impact and Priority value.</inlineHelpText>
        <label>Severity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <description>The status of the issue. Values are Not Yet Started, In Progress, Completed, On Hold, Closed - No action.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Started</fullName>
                    <default>true</default>
                    <label>Not Yet Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Closed - No action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__risk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The risk associated with the issue.</description>
        <inlineHelpText>The risk associated with the issue.</inlineHelpText>
        <label>Risk</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>$Source.pse__Project__c</field>
                <operation>equals</operation>
                <valueField>pse__Risk__c.pse__Project__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.pse__Opportunity__c</field>
                <operation>equals</operation>
                <valueField>pse__Risk__c.pse__Opportunity__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>pse__Risk__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Issue</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>pse__Close_date_mandatory_if_status_is_closed</fullName>
        <active>true</active>
        <description>The Closed Date cannot be blank if the status is set to Completed or Closed - No Action.</description>
        <errorConditionFormula>(AND(OR(ISPICKVAL(pse__Status__c,&apos;Completed&apos;), ISPICKVAL(pse__Status__c,&apos;Closed - No action&apos;)), ISBLANK(pse__Closed_Date__c)))</errorConditionFormula>
        <errorMessage>The Closed Date cannot be blank if the status is set to Completed or Closed - No Action.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Closed_Date_Blank_If_Status_Not_Closed</fullName>
        <active>true</active>
        <description>The Closed date must be blank if the status is set to  Not Yet Started, In Progress or On Hold.</description>
        <errorConditionFormula>AND(OR( ISPICKVAL(pse__Status__c ,&apos;Not Yet Started&apos;),ISPICKVAL(pse__Status__c ,&apos;In Progress&apos;),ISPICKVAL(pse__Status__c ,&apos;On Hold&apos;)), (!ISBLANK(pse__Closed_Date__c ))
)</errorConditionFormula>
        <errorMessage>The Closed date must be blank if the status is set to  Not Yet Started, In Progress or On Hold.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Closed_Date_Greater_Than_Date_Raised</fullName>
        <active>true</active>
        <description>The issue&apos;s closed date must be after it was raised.</description>
        <errorConditionFormula>pse__Closed_Date__c&lt; pse__Date_Raised__c</errorConditionFormula>
        <errorMessage>The issue&apos;s closed date must be after it was raised.</errorMessage>
    </validationRules>
</CustomObject>